Testing page bleeding fix

--- a/Online Resume/home/style.css
+++ b/Online Resume/home/style.css
@@ -114,6 +114,9 @@ footer {
     main {
         height: 200vh;
     }
+    #mainPara {
+        font-size: 0.5vw;
+    }
 }
 
 @media screen and (max-width: 750px) {
